changed footer to be a fixed height and fixed position in attempt to address the poor display on iOS. re-committed to figuring out the fixed position issues that exist on the Home component.

--- a/src/App.css
+++ b/src/App.css
@@ -54,9 +54,9 @@ ul {
 }
 
 nav {
-  position: sticky;
-  /* width: 100%; */
-  /* position: fixed; */
+  /* position: sticky; */
+  width: 100%;
+  position: fixed;
   top: 0;
   display: flex;
   background-color: #ec042c;
@@ -68,8 +68,9 @@ nav {
 }
 
 .content-container {
-  /* margin-top: 5rem; */
-  padding-bottom: 1.25rem;
+  margin-top: 4.5rem;
+  /* padding-bottom: 1.25rem; */
+  margin-bottom: 2.25rem;
   flex-grow: 1;
 }
 
@@ -138,7 +139,8 @@ a:visited {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   column-gap: 1rem;
   row-gap: 2rem;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
+  margin-bottom: 2.25rem;
 }
 
 .shop-thumbnail-container {
@@ -498,11 +500,13 @@ button:hover {
 
 /* BEGIN FOOTER CSS */
 footer {
-  height: auto;
-  padding: 0.25rem 0;
+  height: 2rem;
+  box-sizing: border-box;
+  /* padding: 0.25rem 0; */
   width: 100%;
   max-width: 1920px;
-  position: sticky;
+  /* position: sticky; */
+  position: fixed;
   left: 0;
   bottom: 0;
   display: flex;
@@ -517,7 +521,7 @@ footer {
 .footer-icon {
   fill: white;
   padding: 0 1rem;
-  margin: 0;
+  /* margin: 0.25rem 0; */
   width: 1.5rem;
   height: 1.5rem;
 }
@@ -841,4 +845,8 @@ footer {
   .middle {
     top: 10rem;
   }
+
+  /* footer {
+    position: sticky;
+  } */
 }
